# io

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  render.yaml
ext/app/: .gitignore  LICENSE  MANIFEST.in  package-lock.json  package.json  pyproject.toml
ext/theme/: README.md  RELEASE.md  install.json  package-lock.json  setup.py
jupyter/: Dockerfile
jupyter/notebooks/: Fine-tune-StyleGAN-3.ipynb  Scraping-Data-with-Pinterest.ipynb  Use-CLIP-guided-VQGAN-to-generate-images.ipynb  cookies.pkl
jupyter/widgets/: MANIFEST.in  README.md  install.json  io_widget.json  package-lock.json  package.json  setup.py  webpack.config.js
jupyter/workspaces/: pinterest.json  vqgan.json
notebooks/: Fine-tune-StyleGAN-3.ipynb  Scraping-Data-Pinterest.ipynb  Scraping-Data-with-Pinterest.ipynb  Use-CLIP-guided-VQGAN-to-generate-images.ipynb  custom-svelte-widget.ipynb  custom-widget.ipynb  first-notebook.ipynb
notebooks/experiments/: Development-Notebook.ipynb  Scraping-Data-Pinterest.ipynb  custom-svelte-widget.ipynb
src/: first-notebook.ipynb
src/ext/theme/: .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  install.json  package-lock.json  package.json  pyproject.toml  setup.py
src/ext/theme/.github/workflows/: build.yml  check-release.yml
src/ext/theme/binder/: environment.yml  postBuild
src/ext/theme/lib/: index.js
src/ext/theme/style/: fonts.css  variables.css
website/: Dockerfile  Dockerfile.dev  package-lock.json  package.json  svelte.config.js  tsconfig.json
widgets/: package-lock.json  package.json  webpack.config.js
(+701 files in other folders)
