[build-system]
requires = ["jupyter_packaging~=0.10,<2", "jupyterlab~=3.1"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["IO_Theme/labextension/static/style.js"]
ensured-targets = ["IO_Theme/labextension/static/style.js", "IO_Theme/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["IO_Theme/labextension/**", "yarn.lock", ".*", "package-lock.json"]
